--- a/client/package.json
+++ b/client/package.json
@@ -13,11 +13,13 @@
     "watch-css": "tailwindcss -i ./src/styles/globals.css -o ./src/styles/style.css --watch"
   },
   "dependencies": {
+    "@radix-ui/react-popover": "^1.1.4",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "geist": "^1.3.1",
     "lucide-react": "^0.469.0",
     "react": "^18.3.1",
+    "react-colorful": "^5.6.1",
     "react-dom": "^18.3.1",
     "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7"
