--- a/client/package.json
+++ b/client/package.json
@@ -13,11 +13,13 @@
     "watch-css": "tailwindcss -i ./src/styles/globals.css -o ./src/styles/style.css --watch"
   },
   "dependencies": {
+    "@radix-ui/react-dialog": "^1.1.4",
     "@radix-ui/react-popover": "^1.1.4",
     "@radix-ui/react-scroll-area": "^1.2.2",
     "@radix-ui/react-slot": "^1.1.1",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "cmdk": "^1.0.0",
     "geist": "^1.3.1",
     "lucide-react": "^0.469.0",
     "react": "^18.3.1",
