--- a/client/package.json
+++ b/client/package.json
@@ -22,6 +22,7 @@
     "clsx": "^2.1.1",
     "cmdk": "^1.0.0",
     "geist": "^1.3.1",
+    "lodash": "^4.17.21",
     "lucide-react": "^0.469.0",
     "react": "^18.3.1",
     "react-colorful": "^5.6.1",
@@ -34,6 +35,7 @@
     "@tailwindcss/container-queries": "^0.1.1",
     "@tailwindcss/forms": "^0.5.9",
     "@tailwindcss/typography": "^0.5.15",
+    "@types/lodash": "^4.17.14",
     "@types/node": "^22.10.2",
     "@types/react": "^18.3.18",
     "@types/react-dom": "^18.3.5",
