--- a/client/package.json
+++ b/client/package.json
@@ -18,15 +18,18 @@
     "@radix-ui/react-scroll-area": "^1.2.2",
     "@radix-ui/react-slot": "^1.1.1",
     "@radix-ui/react-tooltip": "^1.1.6",
+    "@types/react-plotly.js": "^2.6.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.0.0",
     "geist": "^1.3.1",
     "lodash": "^4.17.21",
     "lucide-react": "^0.469.0",
+    "plotly.js-dist-min": "^2.35.3",
     "react": "^18.3.1",
     "react-colorful": "^5.6.1",
     "react-dom": "^18.3.1",
+    "react-plotly.js": "^2.6.0",
     "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7"
   },
@@ -37,6 +40,7 @@
     "@tailwindcss/typography": "^0.5.15",
     "@types/lodash": "^4.17.14",
     "@types/node": "^22.10.2",
+    "@types/plotly.js": "^2.35.2",
     "@types/react": "^18.3.18",
     "@types/react-dom": "^18.3.5",
     "@vitejs/plugin-react": "^4.3.4",
