--- a/client/package.json
+++ b/client/package.json
@@ -13,7 +13,8 @@
     "watch-css": "tailwindcss -i ./src/styles/globals.css -o ./src/styles/style.css --watch"
   },
   "dependencies": {
-    "@radix-ui/react-dialog": "^1.1.4",
+    "@radix-ui/react-dialog": "^1.1.6",
+    "@radix-ui/react-label": "^2.1.2",
     "@radix-ui/react-popover": "^1.1.4",
     "@radix-ui/react-scroll-area": "^1.2.2",
     "@radix-ui/react-separator": "^1.1.2",
