Docs: updated gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -27,6 +27,5 @@ server/db/**/*.db
 # Server Logs
 server/*.log
 
-# markdown LLM files (excluding README)
-**/*.md
-!README.md
+# markdown LLM files
+.cursor/
