--- a/client/package.json
+++ b/client/package.json
@@ -50,6 +50,8 @@
     "@types/react-dom": "^18.3.5",
     "@vitejs/plugin-react": "^4.3.4",
     "autoprefixer": "^10.4.20",
+    "echarts": "^5.6.0",
+    "echarts-for-react": "^3.0.2",
     "eslint": "^9.17.0",
     "eslint-plugin-react-hooks": "^5.0.0",
     "eslint-plugin-react-refresh": "^0.4.16",
