Testing: adding tradingview example for high performance plotting, not done yet, just scaffolding. Will finish it later

--- a/server/.gitignore
+++ b/server/.gitignore
@@ -10,5 +10,9 @@ wheels/
 .venv
 
 # markdown LLM files (excluding README)
-**/*.md
+.cursor/
 !README.md
+
+#Custom plugin chats
+chat_*.md
+!chat.md
