--- a/.gitignore
+++ b/.gitignore
@@ -9,23 +9,8 @@ Thumbs.db
 # Client Node
 client/node_modules/
 
-# Server Virtual Environment
-server/venv/
-server/env/
-server/.venv/
-
-# Server global environment variables
-server/.envrc
-server/.env
-
-# Server Database files (SQLite)
-server/db/*.sqlite
-server/db/**/*.sqlite
-server/db/*.db
-server/db/**/*.db
-
-# Server Logs
-server/*.log
+# Server
+server/
 
 # markdown LLM files
 .cursor/
