--- a/client/package.json
+++ b/client/package.json
@@ -36,7 +36,8 @@
     "react-dom": "^18.3.1",
     "react-plotly.js": "^2.6.0",
     "tailwind-merge": "^2.6.0",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "zustand": "^5.0.5"
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
